# superannotate-databricks-connector

./: .gitignore  Dockerfile.spark  Dockerfile.test  LICENSE.txt  README.md  pyproject.toml  readme.md
.github/workflows/: release.yml
demo/: getting_started.ipynb  merge_data.ipynb  working_with_keras_cv.ipynb
src/superannotate_databricks_connector/: __init__.py  text.py  vector.py
src/superannotate_databricks_connector/schemas/: comment.py  shapes.py  tag.py  text_schema.py  vector_schema.py  video_schema.py
superannotate-databricks-connector/: Dockerfile  Dockerfile.spark  Dockerfile.test  main.py  setup.py  test.py
superannotate-databricks-connector/superannotate_databricks_connector/: __init__.py  processing.py  text.py  vector.py
superannotate-databricks-connector/superannotate_databricks_connector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
superannotate-databricks-connector/superannotate_databricks_connector/schemas/: comment.py  vector_schema.py
superannotate-databricks-connector/tests/: processed_instances.json  test_text.py  test_vector.py
superannotate-databricks-connector/tests/test_data/vector/: example_annotation.json  expected_instances.json
superspark/: setup.py
superspark/superspark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_text.py  test_vector.py
tests/test_data/text/: example_annotation.json
tests/test_data/vector/: expected_bbox.json  expected_cuboid.json  expected_ellipse.json  expected_point.json  expected_polygon.json  expected_polyline.json  expected_rbbox.json  expected_tag.json
(+313 files in other folders)
